<resources>
    <string name="app_name" translatable="false">Virtual Time Clock - Gérant</string>
    <string name="loading">Loading...</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="verify_email">Verify email</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="titre">Title</string>
    <string name="date_start">Date start</string>
    <string name="date_stop">date-stop</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location">Location</string>
    <string name="radius">Radius</string>
    <string name="creation_mission_send">Mission Saved</string>
    <string name="creation_mission_fail">Error Send</string>
    <string name="its_not_a_leader">You are not a leader !</string>
    <string name="its_a_leader_sucess_connection">Sucess connection !</string>
    <string name="msg_sign_out">Are you sure you want to log out?</string>
    <string name="save">Save</string>
    <string name="emptyField">Please insert all information</string>
    <string name="addMission">Add Mission</string>
    <string name="calend">Calendar</string>
    <string name="dateFormatStart">"Start : "</string>
    <string name="dateFormatStop">"End : "</string>
    <string name="dateFormat">Month/Day/Year</string>
    <string name="log_in">Log in</string>
    <string name="error">Error !</string>
    <string name="description">Description</string>
    <string name="mailEntreprise">"Company : "</string>
    <string name="upload">Capture and Upload</string>
    <string name="disconnect">Disconnected</string>
    <string name="load_img_failed">Fail to load image</string>
    <string name="error_date">End date must be greater than start date !</string>
    <string name="get_pos">Get position</string>
    <string name="gps_parameter">Goto Settings Page To Enable GPS</string>
    <string name="gps_disabled">GPS is disabled in your device. Would you like to enable it ?</string>
    <string name="lost_localisation">Localisation lost</string>
    <string name="suppression">Suppression</string>
    <string name="suppression_msg">Are you sure you want to delete all the data entered ?</string>
    <string name="suppression_data_success">All data has been deleted</string>
    <string name="suppression_data_cancel">Delete canceled</string>
    <string name="can_delete">You can delete everything by shaking the device.</string>
    <string name="name">Name</string>
    <string name="firstname">Firstname</string>
    <string name="textviewBirthday">"Birthday : "</string>
    <string name="email">Email</string>
    <string name="email_validation">E-mail Validation</string>
    <string name="creation_employee_send">Employee created</string>
    <string name="creation_employee_fail">Error Send</string>
    <string name="addEmployee">Add Employee</string>
    <string name="email_different">The emails you have entered are not the same</string>
    <string name="creation_employee_mail_fail">Account Creation failed</string>
    <string name="error_birthday">The birthday must be smallet than the current date</string>
    <string name="doc_dont_exit">Document does not exist</string>
    <string name="showMission">Detailled mission</string>
    <string name="titreFormat">"Title : "</string>
    <string name="lieuFormat">Location :</string>
    <string name="latitudeFormat">"Latitude : "</string>
    <string name="longitudeFormat">"Longitude : "</string>
    <string name="rayonFormat">"Radius : "</string>
    <string name="descriptionFormat">"Description : "</string>
    <string name="app" translatable="false">Virtual Time Clock</string>
    <string name="employee_in_this_mission">Employees in this mission</string>
    <string name="showEmployeeInMission">Employee on this mission</string>
    <string name="creation_employee_email_fail">The email format is incorrect</string>
    <string name="user_deleted">User deleted</string>
    <string name="suppression_mission_msg">Are you sure you want to delete this mission ?</string>
    <string name="suppression_employee_msg">Are you sure you want to delete this employee ?</string>
    <string name="suppression_employee_success">Employee deleted</string>
    <string name="suppression_mission_success">Mission deleted</string>
    <string name="profile_txt">Profile</string>
    <string name="employee_txt">Employee</string>
    <string name="mission_txt">Mission</string>
    <string name="logout_txt">Logout</string>
    <string name="crop_menu">Crop Image</string>
    <string name="update">Update</string>
</resources>
