<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MissionActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titre"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_start"
        android:inputType="date"/>

    <EditText
        android:id="@+id/edit_text_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_stop"
        android:inputType="date"/>

    <EditText
        android:id="@+id/edit_text_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:inputType="date"/>

    <EditText
        android:id="@+id/edit_text_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:inputType="date"/>

    <EditText
        android:id="@+id/edit_text_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/radius"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edit_text_localisation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:inputType="text"/>


    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        tools:context=".MissionActivity">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Creer mission"
            android:onClick="createMission"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Annuler"
            android:onClick="cancel"/>

    </LinearLayout>

</LinearLayout>