<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_100"
    android:gravity="center_vertical"
    android:padding="16dp"
    tools:context=".NewMissionActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titre"
        android:inputType="text"/>

    <LinearLayout
        android:id="@+id/linearLayoutDateStart"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        tools:context=".MissionActivity">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:text="@string/dateFormatStart"/>

        <TextView
            android:id="@+id/textviewDateStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:text="@string/dateFormat" />

        <Button
            android:id="@+id/btnDateStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_calendar"
            android:text="@string/calend"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDateStop"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="15dp"
        tools:context=".MissionActivity">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textColor="@android:color/white"
            android:text="@string/dateFormatStop"/>

        <TextView
            android:id="@+id/textviewDateStop"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dateFormat" />

        <Button
            android:id="@+id/btnDateStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_calendar"
            android:text="@string/calend"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:inputType="date"/>

    <EditText
        android:id="@+id/edit_text_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:inputType="date"/>

    <EditText
        android:id="@+id/edit_text_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/radius"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edit_text_localisation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:inputType="text"/>


</LinearLayout>