<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".CompleteMissionActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layout_fiche"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/layoutEmployeeMissionBtn"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/fiche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_border"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:layout_marginBottom="40dp"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTitleItem"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:text="@string/titreFormat"/>
                    <TextView
                        android:id="@+id/titre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/colorLocationItem"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTitleItem"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:text="@string/dateFormatStart"/>
                    <TextView
                        android:id="@+id/debut"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/colorLocationItem"
                        android:padding="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTitleItem"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:text="@string/dateFormatStop"/>
                    <TextView
                        android:id="@+id/fin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/colorLocationItem"
                        android:padding="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTitleItem"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:text="@string/lieuFormat"/>
                    <TextView
                        android:id="@+id/lieu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/colorLocationItem"
                        android:padding="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTitleItem"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:text="@string/latitudeFormat"/>
                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/colorLocationItem"
                        android:padding="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTitleItem"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:text="@string/longitudeFormat"/>
                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/colorLocationItem"
                        android:padding="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTitleItem"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:text="@string/rayonFormat"/>
                    <TextView
                        android:id="@+id/rayon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/colorLocationItem"
                        android:padding="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/colorTitleItem"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:text="@string/descriptionFormat"/>
                    <TextView
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColor="@color/colorLocationItem"
                        android:padding="5dp"/>
                </LinearLayout>
            </LinearLayout>
            </ScrollView>
        </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutEmployeeMissionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/layout_border"
                android:padding="20dp"
                android:gravity="center">

                <Button
                android:id="@+id/employeeMissionBtn"
                android:layout_gravity="center"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton"
                android:text="@string/employee_in_this_mission"
                android:textColor="@android:color/white"
                style="@style/Widget.AppCompat.Button.Colored"/>
            </RelativeLayout>


    </RelativeLayout>
</LinearLayout>